--- a/.classpath
+++ b/.classpath
@@ -14,25 +14,29 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
 		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="test" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/Users/naveenkumar/.p2/pool/plugins/org.testng_7.4.0.r202105021533.jar" sourcepath="/Users/naveenkumar/.p2/pool/plugins/org.testng.source_7.4.0.r202105021533.jar"/>
-	<classpathentry kind="lib" path="/Selenium/Jar/poi-5.2.3.jar"/>
+	<classpathentry kind="lib" path="/Users/naveenkumar/Downloads/poi-bin-5.2.3/poi-5.2.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
